homelab-v8/apps/python-hello/devops/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-hello
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-hello
  template:
    metadata:
      labels:
        app: python-hello
    spec:
      containers:
        - name: python-hello
          image: registry.wguilherme.com/python-hello:20260524020510-d028a234 # {"$imagepolicy": "flux-system:python-hello"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
