homelab-v8/apps/python-hello/devops/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-hello
  namespace: default
spec:
  selector:
    app: python-hello
  ports:
    - port: 80
      targetPort: 8080
